fixed out of viewport handler and updated mobile fallback view for pinfinder

--- a/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
+++ b/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
@@ -74,7 +74,7 @@
     position: absolute;
     left: 2.5%;
     top: 2.5%;
-    background: #fff;
+    background: #E6E6E6;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
@@ -157,6 +157,14 @@
     width: 100%;
     margin: 50% 25%;
     padding: 10px;
+    text-align: center;
+    p {
+        margin: 10px;
+    }
+
+    button {
+        background: @adapt-primary-color;
+    }
 }
 
 @media (max-width: 700px) {
